--- a/index.html
+++ b/index.html
@@ -39,6 +39,45 @@
 
     </section>
 
+
+    <!---Course----->
+    <section class="course">
+        <h1>Courses We Offer</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem dolores debitis officia sunt harum ea, possimus eligendi vitae suscipit vel accusantium aspernatur voluptate explicabo cum accusamus expedita provident id ipsam?</p>
+        <div class="row">
+            <div class="course-col">
+                <h3>Intermediate</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim maxime inventore quasi rem aut. Deserunt, magni! Aliquam cumque rerum iste pariatur atque, quidem
+                ratione dignissimos provident doloribus asperiores placeat quas voluptatem sed voluptatibus exercitationem, incidunt neque harum enim eaque soluta at. Molestias fuga officiis unde laudantium voluptas quae, expedita consequatur.
+                </p>
+            </div>
+            <div class="course-col">
+                <h3>Degree</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim maxime inventore quasi rem aut. Deserunt, magni! Aliquam cumque rerum iste pariatur atque, quidem
+                ratione dignissimos provident doloribus asperiores placeat quas voluptatem sed voluptatibus exercitationem, incidunt neque harum enim eaque soluta at. Molestias fuga officiis unde laudantium voluptas quae, expedita consequatur.              
+                </p>
+            </div>
+            <div class="course-col">
+                <h3>Post Graduation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim maxime inventore quasi rem aut. Deserunt, magni! Aliquam cumque rerum iste pariatur atque, quidem
+                ratione dignissimos provident doloribus asperiores placeat quas voluptatem sed voluptatibus exercitationem, incidunt neque harum enim eaque soluta at. Molestias fuga officiis unde laudantium voluptas quae, expedita consequatur.
+                </p>
+            </div>
+        </div>
+    </section>
+        <!---Cumpus----->
+    <section class="campus">
+        <h1>Our Global Campus</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto doloribus iste nisi, a consequatur id sit autem, in corrupti voluptatibus ad enim pariatur laboriosam ut dignissimos harum inventore vero? Quia.</p>
+
+        <div class="row">
+            <div class="campus-col">
+                <img src="images/london.png">
+            </div>
+        </div>
+    </section>
+
+    <!---JS for the Menu----->
     <script>
         var navLinks = document.getElementById("navLinks");
 
