--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section class="header">
@@ -73,11 +73,115 @@
         <div class="row">
             <div class="campus-col">
                 <img src="images/london.png">
+                <div class="layer">
+                    <h3>LONDON</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="images/newyork.png">
+                <div class="layer">
+                    <h3>NEW YORK</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="images/washington.png">
+                <div class="layer">
+                    <h3>WASHINGTON</h3>
+                </div>
             </div>
         </div>
     </section>
 
-    <!---JS for the Menu----->
+       <!---Facilities----->
+    <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+        <div class="row">
+            <div class="facilities-col">
+                <img src="images/library.png">
+                <h3>World Class Library</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum incidunt voluptatibus ex laborum velit soluta praesentium obcaecati dolore voluptatem quam iusto consequuntur accusantium est aliquid aliquam, 
+                autem facere. Aliquid, voluptate.</p>
+            </div>
+            <div class="facilities-col">
+                <img src="images/basketball.png">
+                <h3>Largest Play Ground</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum incidunt voluptatibus ex laborum velit soluta praesentium obcaecati dolore voluptatem quam iusto consequuntur accusantium est aliquid aliquam, 
+                autem facere. Aliquid, voluptate.</p>
+            </div>
+            <div class="facilities-col">
+                <img src="images/cafeteria.png">
+                <h3>Tasty and Healthy Food</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum incidunt voluptatibus ex laborum velit soluta praesentium obcaecati dolore voluptatem quam iusto consequuntur accusantium est aliquid aliquam, 
+                autem facere. Aliquid, voluptate.</p>
+            </div>
+        </div>
+    </section>
+
+    <!---testimonials----->
+    <section class="testimonials">
+        <h1>What Our Student Says</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <div class="row">
+            <div class="testimonials-col">
+                <img src="images/user1.jpg">
+                <div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, recusandae, architecto quisquam tempora officiis voluptatem dolores explicabo quas veritatis est officia rerum.
+                    Temporibus consequuntur iure obcaecati quisquam accusamus ipsam nesciunt dolores eveniet, ratione sed sunt excepturi dignissimos
+                    quia assumenda! Ab unde sunt sapiente magni atque cupiditate sequi delectus, repellat a aut consectetur in laborum facilis,
+                    quam praesentium fugit quae laboriosam.</p>
+                    <h3>Sharon Berkley</h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+            </div>
+            <div class="testimonials-col">
+                <img src="images/user2.jpg">
+                <div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, recusandae, architecto quisquam tempora officiis voluptatem dolores explicabo quas veritatis est officia rerum.
+                    Temporibus consequuntur iure obcaecati quisquam accusamus ipsam nesciunt dolores eveniet, ratione sed sunt excepturi dignissimos
+                    quia assumenda! Ab unde sunt sapiente magni atque cupiditate sequi delectus, repellat a aut consectetur in laborum facilis,
+                    quam praesentium fugit quae laboriosam.</p>
+                    <h3>Stav Alon</h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+     <!---Call To Action----->
+
+     <section class="cta">
+         <h1>Enroll For Our Various Online Courses<br>Anywhere From The World</h1>
+         <a href="" class="hero-btn">CONTACT US</a>
+     </section>
+
+      <!---Call To Action----->
+
+    <!---Footer----->
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet. consectetur adipisicing elit.
+        Temporibus consequuntur iure obcaecati quisquam accusamus
+        quia<br>assumenda ut. Maeceans Ab unde sunt sapiente magni atque 
+        laboriosam.</p>
+        <div class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>       
+        </div>
+        <p>Made With  <i class="fa fa-heart-o"></i> Stav Alon Developer</p>
+
+    </section>
     <script>
         var navLinks = document.getElementById("navLinks");
 
